# AWS_CDK_POETRY

./: README.md  generate_project.sh  go.mod  go.sum  main.go  makefile  poetry_cdk.readme.md
.github/: readme.md
.github/PULL_REQUEST_TEMPLATE/: feature_pull_request.md
.github/workflows/: cli-build_release.yml  code-build.yml  projects-build.yml
cdktest/: README.md  cdk.json  pyproject.toml
cdktest/src/cdktest/: app.py
cdktest/src/cdktest/cdktest/: cdktest_stack.py
cdktest/src/cdktest/tests/unit/: test_cdktest_stack.py
ci/: build-all-poetry-projects.sh  build-cli.sh  build-poetry-project.sh
cmd/: root.go
cmd/generate/: generate.go
configs/: pyproject.toml.template
docs/: poetry_cdk.readme.md
internal/generator/: generate.go
internal/utils/: utils.go
scripts/linux/: generate_project.sh  setup_requirements.sh
