[tool.poetry]
name = "cdktest"
version = "0.1.0"
description = ""
authors = ["kinfinity <ksupro1@gmail.com>"]
readme = "README.md"

packages = [
    { include = "cdktest", from = "src" }
]

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
pylint = "^2.17.5"
pytest = "^7.4.0"

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
warn_unreachable = true

[tool.isort]
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
disable = "too-few-public-methods, invalid-name, missing-function-docstring, missing-class-docstring, missing-module-docstring, fixme"

[tool.pylint.MASTER]
extension-pkg-whitelist = "pydantic"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.93.0"
constructs = ">=10.0.0,<11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
